# mate

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
examples/complex/: Cargo.toml
examples/complex/src/: lib.rs
examples/http/: Cargo.toml  Justfile  rust-toolchain.toml
examples/http/src/: lib.rs  main.rs
examples/simple/: Cargo.toml
examples/simple/src/: lib.rs
jobs/http/: Cargo.toml
src/executor/: Cargo.toml
src/executor/src/: lib.rs
src/executor/src/runtime/: wasmtime.rs
src/job/: Cargo.toml
src/job/src/: lib.rs
src/mate/: Cargo.toml
src/mate/src/: lib.rs  main.rs
src/runner/: Cargo.toml
src/runner/src/: lib.rs
src/task/: Cargo.toml
src/task/src/: lib.rs
tasks/fibonacci/: Cargo.toml  README.md
tasks/fibonacci/src/: lib.rs
tasks/http/: Cargo.toml  README.md
tasks/http/src/: lib.rs
tasks/sum/: Cargo.toml  README.md
tasks/sum/src/: lib.rs
