[workspace]
members = ["./src/*", "./tasks/*"]
default-members = ["src/mate"]
resolver = "3"

[workspace.package]
authors = ["Leo Borai <estebanborai@gmail.com>"]
version = "0.0.0-pre.895b07c"
edition = "2024"
categories = ["web-programming"]
description = "🦀🧡🧉"
documentation = "https://docs.rs/mate"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.11"
clap = "4.5"
log = "0.4"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tokio = "1"
quote = "1.0"
wasmtime = "40"
wasmtime-wasi = "40"
wasmtime-wasi-http = "40"
wit-bindgen = "0.50"
wstd = "0.6"

mate = { path = "./src/mate", default-features = false }
mate_executor = { path = "./src/executor" }
