[package]
name = "complex"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "complex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}

mate_job = { workspace = true }
