[package]
name = "http"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "http"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
reqwest = "0.12.28"
tokio = { version = "1", default-features = false, features = ["rt"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}

mate_job = { workspace = true }
