[package]
name = "http"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wit-bindgen = { workspace = true }
wstd = { workspace = true }

mate_job = { workspace = true }
