[package]
name = "mate_executor"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "mate_executor"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
tokio = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi =  { workspace = true }
wasmtime-wasi-http = { workspace = true, features = ["component-model-async"] }
