[package]
name = "mate_job"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "mate_job"
path = "src/lib.rs"
proc-macro = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
wit-bindgen = { workspace = true }
wstd = { workspace = true }
