[package]
name = "mate"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[[bin]]
name = "mate"
path = "src/bin/main.rs"

[lib]
name = "mate"
path = "src/lib.rs"
proc-macro = true

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:bytes", "dep:clap", "dep:serde", "dep:serde_json", "dep:tokio", "dep:mate_executor"]
macros = ["dep:proc-macro2", "dep:quote", "dep:syn", "dep:wit-bindgen"]

[dependencies]
anyhow = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
clap = { workspace = true, features = ["env", "derive", "std"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }

proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, features = ["full", "extra-traits"], optional = true }
wit-bindgen = { workspace = true, optional = true }

mate_executor = { workspace = true, optional = true }
