[package]
name = "mate_runner"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "mate_runner"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
wasmtime = { workspace = true }

mate_job = { workspace = true }
